// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button Async Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #4945EE;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-2:hover:not(:disabled) {
  background-color: #413ed6;
}

.emotion-2:active:not(:disabled) {
  background-color: #3a37be;
}

.emotion-2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-9 {
  font-size: 1rem;
  font-weight: 500;
  color: black;
  background-color: #FDD835;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-9:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-9:hover:not(:disabled) {
  background-color: #e3c22f;
}

.emotion-9:active:not(:disabled) {
  background-color: #caac2a;
}

.emotion-9:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-9:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-13 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #4945EE;
  padding: 1rem;
  height: 3.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-13:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-13:hover:not(:disabled) {
  background-color: #413ed6;
}

.emotion-13:active:not(:disabled) {
  background-color: #3a37be;
}

.emotion-13:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-13:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-2"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Sync Action
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-2"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Async sm
            </span>
          </span>
        </button>
        <div
          className="emotion-8"
        >
          <div>
            Button inner text from event: 
            
          </div>
          <div>
            Fake response: 
            
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-9"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Async md
            </span>
          </span>
        </button>
        <div
          className="emotion-8"
        >
          <div>
            Button inner text from event: 
            
          </div>
          <div>
            Fake response: 
            
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-13"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Async lg
            </span>
          </span>
        </button>
        <div
          className="emotion-8"
        >
          <div>
            Button inner text from event: 
            
          </div>
          <div>
            Fake response: 
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Block Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  width: 100%;
  background-color: #4945EE;
  padding: 1rem;
  height: 3.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-2:hover:not(:disabled) {
  background-color: #413ed6;
}

.emotion-2:active:not(:disabled) {
  background-color: #3a37be;
}

.emotion-2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #ececfd;
  width: 1rem;
  height: 1rem;
}

.emotion-6 path {
  fill: #ececfd;
}

.emotion-7 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-11 {
  font-size: 1rem;
  font-weight: 500;
  color: #4945EE;
  width: 100%;
  background-color: transparent;
  padding: 1rem;
  height: 3.5rem;
  border-radius: 0.25rem;
  border: solid 0.0625rem #4945EE;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.125rem;
}

.emotion-11:hover:not(:disabled) {
  background-color: #ececfd;
}

.emotion-11:active:not(:disabled) {
  background-color: #dad9fb;
}

.emotion-11:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-13 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-14 {
  font-size: 1rem;
  font-weight: 500;
  color: #36C152;
  width: 100%;
  background-color: transparent;
  padding: 1rem;
  height: 3.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-14:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-14:hover:not(:disabled) {
  background-color: #eaf8ed;
}

.emotion-14:active:not(:disabled) {
  background-color: #d6f2dc;
}

.emotion-14:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-14:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-2"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </span>
            <span
              className="emotion-7"
            >
              Hello world
            </span>
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-11"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-13"
            >
              Hello world
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-14"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-13"
            >
              Hello world
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Colors 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: black;
  background-color: #FF1744;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-2:hover:not(:disabled) {
  background-color: #e5143d;
}

.emotion-2:active:not(:disabled) {
  background-color: #cc1236;
}

.emotion-2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-5 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #cc1236;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-5:hover:not(:disabled) {
  background-color: #b2102f;
}

.emotion-5:active:not(:disabled) {
  background-color: #990d28;
}

.emotion-5:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-5:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-8 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: black;
  background-color: #e9a0ee;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-8:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-8:hover:not(:disabled) {
  background-color: #e389ea;
}

.emotion-8:active:not(:disabled) {
  background-color: #de71e5;
}

.emotion-8:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-8:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-2"
          data-testid="button"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Disabled
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-5"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Red 600
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-8"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Magenta 200
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #4945EE;
  padding: 1rem;
  height: 3.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-2:hover:not(:disabled) {
  background-color: #413ed6;
}

.emotion-2:active:not(:disabled) {
  background-color: #3a37be;
}

.emotion-2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-5 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #4945EE;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-5:hover:not(:disabled) {
  background-color: #413ed6;
}

.emotion-5:active:not(:disabled) {
  background-color: #3a37be;
}

.emotion-5:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-5:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-8 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #4945EE;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-8:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-8:hover:not(:disabled) {
  background-color: #413ed6;
}

.emotion-8:active:not(:disabled) {
  background-color: #3a37be;
}

.emotion-8:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-8:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-2"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Hello world
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-5"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Hello world
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-8"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Hello world
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: black;
  background-color: #36C152;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-2:hover:not(:disabled) {
  background-color: #30ad49;
}

.emotion-2:active:not(:disabled) {
  background-color: #2b9a41;
}

.emotion-2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-8 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: black;
  background-color: #FF1744;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-8:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-8:hover:not(:disabled) {
  background-color: #e5143d;
}

.emotion-8:active:not(:disabled) {
  background-color: #cc1236;
}

.emotion-8:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-8:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #4945EE;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-11:hover:not(:disabled) {
  background-color: #413ed6;
}

.emotion-11:active:not(:disabled) {
  background-color: #3a37be;
}

.emotion-11:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-14 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: black;
  background-color: #FF6F00;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-14:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-14:hover:not(:disabled) {
  background-color: #e56300;
}

.emotion-14:active:not(:disabled) {
  background-color: #cc5800;
}

.emotion-14:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-14:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-17 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #1451dc;
  background-color: transparent;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-17:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-17:hover:not(:disabled) {
  background-color: #f3f5f8;
}

.emotion-17:active:not(:disabled) {
  background-color: #e7ebf2;
}

.emotion-17:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-17:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-2"
          data-testid="button"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Success
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-2"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Success
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-8"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Error
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-11"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Info
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-14"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Warning
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-17"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              Link
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button with icon 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #4945EE;
  padding: 1rem;
  height: 3.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-2:hover:not(:disabled) {
  background-color: #413ed6;
}

.emotion-2:active:not(:disabled) {
  background-color: #3a37be;
}

.emotion-2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #ececfd;
  width: 1rem;
  height: 1rem;
}

.emotion-6 path {
  fill: #ececfd;
}

.emotion-7 {
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-10 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-19 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-22 {
  fill: #ececfd;
  width: 1.125rem;
  height: 1.125rem;
}

.emotion-22 path {
  fill: #ececfd;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-2"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </span>
            <span
              className="emotion-7"
            >
              Hello world
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-2"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-10"
            >
              Hello world
            </span>
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-2"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </span>
            <span
              className="emotion-19"
            >
              Hello world
            </span>
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-22"
                />
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Dynamic Button Props 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  color: black;
  background-color: #FDD835;
  padding: 1rem;
  height: 3.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-1:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-1:hover:not(:disabled) {
  background-color: #e3c22f;
}

.emotion-1:active:not(:disabled) {
  background-color: #caac2a;
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-1:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <button
      className="emotion-1"
      data-testid="button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-3"
        >
          change me!
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Icon Button Sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #4945EE;
  padding: 1rem;
  height: 3.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-2:hover:not(:disabled) {
  background-color: #413ed6;
}

.emotion-2:active:not(:disabled) {
  background-color: #3a37be;
}

.emotion-2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #ececfd;
  width: 0.875rem;
  height: 0.875rem;
}

.emotion-6 path {
  fill: #ececfd;
}

.emotion-7 {
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-8 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #4945EE;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-8:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-8:hover:not(:disabled) {
  background-color: #413ed6;
}

.emotion-8:active:not(:disabled) {
  background-color: #3a37be;
}

.emotion-8:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-8:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-14 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #4945EE;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-14:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-14:hover:not(:disabled) {
  background-color: #413ed6;
}

.emotion-14:active:not(:disabled) {
  background-color: #3a37be;
}

.emotion-14:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-14:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-2"
          data-testid="button-size-lg"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </span>
            <span
              className="emotion-7"
            >
              Hello world
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-8"
          data-testid="button-size-md"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </span>
            <span
              className="emotion-7"
            >
              Hello world
            </span>
          </span>
        </button>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <button
          className="emotion-14"
          data-testid="button-size-sm"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
                onClick={[Function]}
              >
                <span
                  className="emotion-6"
                />
              </span>
            </span>
            <span
              className="emotion-7"
            >
              Hello world
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Non Filled Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  color: #4945EE;
  background-color: transparent;
  padding: 1rem;
  height: 3.5rem;
  border-radius: 0.25rem;
  border: solid 0.0625rem #4945EE;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-1:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.125rem;
}

.emotion-1:hover:not(:disabled) {
  background-color: #ececfd;
}

.emotion-1:active:not(:disabled) {
  background-color: #dad9fb;
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-1:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <button
      className="emotion-1"
      data-testid="button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-3"
        >
          Hello world
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Regular Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #4945EE;
  padding: 1rem;
  height: 3.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-1:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-1:hover:not(:disabled) {
  background-color: #413ed6;
}

.emotion-1:active:not(:disabled) {
  background-color: #3a37be;
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-1:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <button
      className="emotion-1"
      data-testid="button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-3"
        >
          Hello world
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Transparent Button 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  font-size: 1rem;
  font-weight: 500;
  color: #4945EE;
  background-color: transparent;
  padding: 1rem;
  height: 3.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-1:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-1:hover:not(:disabled) {
  background-color: #ececfd;
}

.emotion-1:active:not(:disabled) {
  background-color: #dad9fb;
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-1:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <button
      className="emotion-1"
      data-testid="button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-3"
        >
          Hello world
        </span>
      </span>
    </button>
  </div>
</div>
`;
